--- a/apps/admin/index.html
+++ b/apps/admin/index.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/images/logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>NestJS Blog Admin</title>
+    <title>Ryal Blog Admin</title>
   </head>
   <body>
     <div id="root"></div>
